--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,161 +1,191 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+
 /* ESTILOS GENERALES */
 * {
-    box-sizing: border-box;
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+    font-family: 'Inter';
+    font-style: normal;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    font-family: Inter;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 19px;
+    letter-spacing: 0em;
+    text-align: center;
+    background: #F3F5FC;
 }
 
 /* Encriptador - 1 Desktop */
 
-body {
-    background: #f3f5fc;
-    position: relative;
-    width: 1440px;
-    height: 1024px;
+main {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
 }
 
-/* Imagenes */
+/* Vector */
 
-/* Vector Logo Alura */
 .logo-alura {
     position: absolute;
-    left: 36.67%;
-    right: 37.43%;
-    top: 0%;
+    top: 3%;
     bottom: 0%;
-}
-
-/* Vector Logo Info */
-
-.logo-info {
-    position: absolute;
-    left: 0%;
-    right: 0%;
-    top: 0%;
-    bottom: 0%;
-}
-
-/* Vector Muñeco */
-
-.vector-muñeco {
-    position: absolute;
-    width: 336px;
-    height: 304px;
-    left: 1032px;
-    top: 283px;
 }
 
 /* Ingrese el texto aqui */
-.text-area-1 {
-    position: absolute;
-    width: 577px;
-    height: 48px;
-    left: 240px;
-    top: 168px;
 
-    font-family: 'Inter';
+main > textarea {
+    position: absolute;
+    width: 680px;
+    height: 40%;
+    left: 242px;
+    top: 168px;
     font-style: normal;
-    font-weight: 400;
     font-size: 32px;
-    line-height: 150%;
+    line-height: 90%;
+    color: #0A3871;
+    border: 0;
+    outline: 0;
+    background-color: #F3F5FC;
+    flex-grow: 1;
+    resize: none;
+    scroll-behavior: smooth;
+}
+
+textarea::placeholder {
+    color: #0A3871;
 }
 
 /* Solo letras minúsculas y sin acentos */
-.input-texto {
-    width: 205px;
+.article-info {
+    width: 45%;
+    height: 95vh;
+    display: flex;
+    align-items: flex-end;
+    color: #495057;
+    font-size: 12px;
+}
+
+.article-info > p {
+    width: 250px;
     height: 18px;
-    font-family: 'Inter';
-    font-style: normal;
     font-weight: 400;
     font-size: 12px;
     line-height: 150%;
     color: #495057;
     opacity: 0.8;
-    flex: none;
     order: 1;
     flex-grow: 0;
+
 }
 
-/* Ningún mensaje fue encontrado */
-.mensaje-texto {
-    width: 336px;
-    height: 58px;
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 24px;
-    line-height: 120%;
-    text-align: center;
-    color: #343A40;
+.logo-info  {
+    display: flex;
+    justify-content: flex-start;
+    margin-bottom: 1em;
+}
+
+.parrafo-info {
+    display: flex;
+    justify-content: flex-start;
+    gap: 1em;
+}
+
+/* Buttons */
+
+.flex-btns {
+    display: flex;
+    gap: 1.5rem;
+}
+
+button {
+    padding: 24px;
+    border-radius: 24px;
     flex: none;
-    order: 0;
-    align-self: stretch;
     flex-grow: 0;
 }
 
-
-/* Ingresa el texto que desees encriptar o desencriptar. */
-.text-area-2 {
-    width: 336px;
-    height: 48px;
+button > p {
+    width: 280px;
+    height: 19px;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
-    line-height: 150%;
+    line-height: 19px;
     text-align: center;
-    color: #495057;
     flex: none;
-    order: 1;
-    align-self: stretch;
-    flex-grow: 0;
+    order: 0;
+    flex-grow: 1;
 }
 
-/* Botones */
+/* Button Blue */
+
 .btn-blue {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    padding: 24px;
-    gap: 8px;
-    width: 328px;
-    height: 67px;
     background: #0A3871;
     border-radius: 24px;
     flex: none;
     order: 0;
     flex-grow: 0;
+    color: #FFFFFF;
+    border-color: transparent;
 }
 
+/* Button Light gray */
 .btn-lightgray {
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    padding: 24px;
-    gap: 8px;
-    width: 328px;
-    height: 67px;
     background: #D8DFE8;
     border: 1px solid #0A3871;
-    border-radius: 24px;
-    flex: none;
     order: 1;
-    flex-grow: 0;
+    color: #0A3871;
 }
 
-.btn-white {
-    box-sizing: border-box;
+/* Aside */
+
+.article-respuesta {
     display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    padding: 24px;
-    gap: 8px;
-    position: absolute;
+    flex-direction: column;
+    justify-content: center;
+    height: 100vh;
+    background: #FFFFFF;
+    box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
+    border-radius: 32px;
+    margin: 2rem 0;
+    gap: 1.5rem;
+}
+
+/* Ningún mensaje fue encontrado */
+.texto {
+    font-family: 'Inter';
+    font-style: normal;
+    text-align: center;
+    color: #495057;
+    flex: none;
+    align-self: stretch;
+    flex-grow: 0;
     width: 336px;
-    height: 67px;
-    left: 1032px;
-    top: 885px;
-    border: 1px solid #0A3871;
-    border-radius: 24px;
+}
+
+.parrafo-superior {
+    height: 58px;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 120%;
+    color: #343A40;
+    flex: none;
+    order: 0;
+}
+
+/* Ingresa el texto que desees encriptar o desencriptar. */
+
+.parrafo-inferior {
+    height: 48px;
+    font-weight: 400;
+    font-size: 16px;
+    order: 1;
 }
