--- a/styles/styles.css
+++ b/styles/styles.css
@@ -180,7 +180,7 @@ main {
     }
 }
 
-/* QUERIES TABLET (1430-480) */
+/* QUERIES TABLET */
 @media screen and (max-width: 768px) {
     
     header {
