--- a/styles/styles.css
+++ b/styles/styles.css
@@ -138,7 +138,7 @@ main {
 }
 
 .info {
-    background-image: url("/assets/info-logo.svg");
+    background-image: url("/assets/informacion.svg");
     background-repeat: no-repeat;
     background-position-y: 48%;
     display: flex;
