--- a/styles/styles.css
+++ b/styles/styles.css
@@ -62,7 +62,7 @@ main {
     display: flex;
     flex-direction: column;
     background: #FFFFFF;
-    background-image: url("../assets/munieco.svg");
+    background-image: url("./assets/munieco.svg");
     background-repeat: no-repeat;
     background-position: center;
     border: none;
@@ -138,7 +138,7 @@ main {
 }
 
 .info {
-    background-image: url("../assets/informacion.svg");
+    background-image: url("./assets/informacion.svg");
     background-repeat: no-repeat;
     background-position-y: 48%;
     display: flex;
@@ -242,7 +242,7 @@ main {
     }
     
     .mensaje {
-        background-image: url("../assets/mensaje-no-encontrado.svg");
+        background-image: url("./assets/mensaje-no-encontrado.svg");
         height: 20vh;
         width: 100%;
         margin-top: 1em;
@@ -314,7 +314,7 @@ main {
 
     .mensaje {
         text-align: center;
-        background-image: url("../assets/mensaje-no-encontrado.svg");        
+        background-image: url("./assets/mensaje-no-encontrado.svg");        
         height: 100%;
         border-radius: .5em;
         padding-left: 0;
